# CPP_zia_2018

./: CMakeLists.txt  conanfile.txt  server_config.json
certificate/: zia-cert.pem  zia-key.pem
module/: CMakeLists.txt
module/DeflateZipper/: CMakeLists.txt
module/DeflateZipper/inc/: ModuleDeflateZipper.hpp
module/DeflateZipper/src/: ModuleDeflateZipper.cpp
module/GZipper/: CMakeLists.txt
module/GZipper/inc/: GZipper.hpp
module/GZipper/src/: GZipper.cpp
module/php/: CMakeLists.txt
module/php/inc/: php.hpp
module/php/src/: php.cpp
module/ssl/: CMakeLists.txt
module/ssl/inc/: SSLConnection.hpp
module/ssl/src/: SSLConnection.cpp  ssl.cpp
module/tester/: CMakeLists.txt
module/tester/inc/: tester.hpp
module/tester/src/: tester.cpp
solution/: CMakeLists.txt
solution/inc/: zia.hpp
solution/inc/default_module/: ModuleContextConverter.hpp  ModuleDefaultPage.hpp  ModuleHttpRequestParser.hpp  ModuleHttpResponseParser.hpp  ModuleHttpService.hpp  ModuleReader.hpp  ModuleWriter.hpp
solution/inc/dlloader/: IDynamicLibrary.hpp  ModulesManager.hpp
solution/inc/dlloader/linux/: DynamicLibrary.hpp
solution/inc/dlloader/windows/: DynamicLibrary.hpp
solution/inc/server/: ConfigManager.hpp  Headers.hpp  Request.hpp  Server.hpp  ShellServer.hpp
solution/src/: main.cpp
solution/src/default_module/: ModuleContextConverter.cpp  ModuleDefaultPage.cpp  ModuleHttpRequestParser.cpp  ModuleHttpResponseParser.cpp  ModuleHttpService.cpp  ModuleReader.cpp  ModuleWriter.cpp
solution/src/dlloader/: ModulesManager.cpp
solution/src/dlloader/linux/: DynamicLibrary.cpp
solution/src/dlloader/windows/: DynamicLibrary.cpp
solution/src/server/: ConfigManager.cpp  Headers.cpp  Request.cpp  Server.cpp  ShellServer.cpp
www/: bidon.html  index.html  phpinfo.php
